modified exercise file

--- a/moon.html
+++ b/moon.html
@@ -11,7 +11,7 @@
     <h2>A Natural Satellite</h2>
     <p>The moon is the only natural satellite of the Earth, and the fifth largest satellite in the Solar System. It is the largest natural satellite of a planet in the Solar System relative to the size of its primary, having a quarter the diameter of Earth, but only <sup>1</sup>/<sub>81</sub> its' mass</p>
     <figure><img src='moon.png'>
-        <figcaption>The Moon as seen from Ottawa</figcaption>
+        <figcaption>The Moon as seen from Ottawa.</figcaption>
     </figure>
     <p>You can learn more about the moon landings <a href="https://en.wikipedia.org/wiki/Moon_landing">here</a></p>
     <h3>Statistics about the Moon</h3>
